# nextdeck

./: .gitignore  Cargo.toml  DEV.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  support.yml  troubleshooting.yml
.github/workflows/: ci.yml  release.yml
docs/nextest-integration/: README.md
docs/test-events/: README.md
docs/troubleshooting/: README.md
docs/xtask-integration/: README.md
nextdeck-helper/: Cargo.toml  README.md
nextdeck-helper/src/: lib.rs  xtask.rs
nextdeck-test-events/: Cargo.toml  README.md
nextdeck-test-events/src/: lib.rs  xtask.rs
src/: app.rs  command.rs  config.rs  custom_run.rs  diagnostics.rs  dirty.rs  disk_usage.rs  editor.rs  events.rs  field_schema.rs  git_status.rs  input.rs  input_field.rs  main.rs  nextest.rs  output.rs  output_layout.rs  output_pane.rs  parameter_list.rs  queue.rs  request.rs  runner.rs  scroll.rs  settings.rs  source.rs  state.rs  symbols.rs  terminal.rs  test_events.rs  text_fit.rs  theme.rs  tree.rs  ui.rs  xtask.rs
src/app/: tests.rs
src/command/: tests.rs
src/config/: tests.rs
src/disk_usage/: tests.rs
src/editor/: tests.rs
src/git_status/: tests.rs
src/input_field/: tests.rs
src/nextest/: tests.rs
src/output/: tests.rs
src/output_pane/: tests.rs
src/runner/: tests.rs
src/scroll/: tests.rs
src/source/: tests.rs
src/theme/: tests.rs
src/tree/: tests.rs
src/ui/: geometry.rs  tests.rs  view_helpers.rs
src/ui/components/: discovery.rs  disk_cleanup.rs  help.rs  info.rs  mod.rs  output.rs  output_search.rs  settings.rs  status.rs  test_details.rs  test_events.rs  tests.rs  xtasks.rs
src/ui/primitives/: auto_column.rs  mod.rs  modal.rs  scrollable.rs
src/xtask/: persistence.rs  preferences.rs  tests.rs
src/xtask/persistence/: tests.rs
tests/: discovery.rs  xtask_integration.rs
tests/fixtures/: libtest-json-plus.txt
tests/fixtures/cancellation-workspace/: Cargo.toml
tests/fixtures/cancellation-workspace/.config/: nextest.toml
tests/fixtures/cancellation-workspace/tests/: bootstrap.rs  deferred.rs  scenario.rs  scenario_c.rs  scenario_d.rs
tests/fixtures/compile-failure-workspace/: Cargo.toml
tests/fixtures/compile-failure-workspace/src/: lib.rs
tests/fixtures/output-workspace/: Cargo.toml
tests/fixtures/output-workspace/.config/: nextest.toml
tests/fixtures/output-workspace/src/: lib.rs
tests/fixtures/output-workspace/tests/: integration_output.rs
tests/fixtures/sample-workspace/: Cargo.toml
tests/fixtures/sample-workspace/crates/alpha/: Cargo.toml
tests/fixtures/sample-workspace/crates/alpha/src/: lib.rs
tests/fixtures/sample-workspace/crates/beta/: Cargo.toml
tests/fixtures/sample-workspace/crates/beta/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
