[package]
name = "nextdeck"
version = "0.1.0"
edition = "2024"
description = "Terminal-native UI for cargo-nextest"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/nextdeck"

[workspace]
members = [".", "nextdeck-test-events", "xtask"]
resolver = "3"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
nextest-metadata = "0.14.1"
nextdeck-test-events = { version = "0.1.0", path = "nextdeck-test-events" }
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal-colorsaurus = "1.0.3"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
