[package]
name = "nextdeck-helper"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Integration helpers for Nextdeck test events and Clap-powered xtasks"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/nextdeck-helper"
repository = "https://github.com/romansky/nextdeck"
homepage = "https://github.com/romansky/nextdeck"
keywords = ["nextdeck", "testing", "test-events", "xtask", "clap"]
categories = ["development-tools::testing"]

[features]
default = []
xtask-clap = ["dep:clap", "clap/derive"]

[dependencies]
clap = { version = "4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
