[package]
name = "nextdeck-test-events"
version = "0.1.0"
edition = "2024"
description = "Structured events for tests launched by nextdeck"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/nextdeck-test-events"

[features]
default = []
xtask-clap = ["dep:clap", "clap/derive"]

[dependencies]
clap = { version = "4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
