[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1.0"
nextdeck-test-events = { path = "../nextdeck-test-events", features = ["xtask-clap"] }
serde_json = "1.0"
sha2 = "0.11"
tar = "0.4"
