[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
flate2 = "1.1"
nextdeck-helper = { workspace = true, features = ["xtask-clap"] }
serde_json.workspace = true
sha2 = "0.11"
tar = "0.4"
